--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Hugo Senée</title>
 </head>
 <body>
-    
+    <section class="landing">
+        <div class="image">
+            <img src="images/hugo détouré noir et blanc keus.png" alt="hugo">
+        </div>
+        <div class="droite">
+            <div class="hugo">
+                <p>Hugo Senée</p>
+            </div>
+            <div class="developpeur">
+                <p>Développeur</p>
+            </div>
+        </div>
+    </section>
+    <section class="fondblanc">
+        <div class="about">
+            <p>ABOUT</p>
+        </div>
+        <div class="text">
+            <p>étudiant à l'iim, au pôle Leonard de Vinci, j'étudie le développement web au cours d'un bachelor "coding et digital innovation"</p>
+        </div>
+    </section>
 </body>
 </html>
