:art: réalisation du body

--- a/index.html
+++ b/index.html
@@ -29,5 +29,37 @@
             <p>étudiant à l'iim, au pôle Leonard de Vinci, j'étudie le développement web au cours d'un bachelor "coding et digital innovation"</p>
         </div>
     </section>
+    <section class="projets">
+        <div class="titre">
+            <p>Projets</p>
+        </div>
+        <div class="projet1">
+            <div class="imgsite">
+
+            </div>
+            <div class="textsite">
+                <p id="nomsite">Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit voluptatum sint iste, quos dolorem.</p>
+            </div>
+        </div>
+        <div class="projet2">
+            <div class="textsite">
+                <p id="nomsite">Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit voluptatum sint iste, quos dolorem.</p>
+            </div>
+            <div class="imgsite">
+
+            </div>
+        </div>
+        <div class="projet3">
+            <div class="imgsite">
+
+            </div>
+            <div class="textsite">
+                <p id="nomsite">Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit voluptatum sint iste, quos dolorem.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
