:sparkles: changement de couleurs

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         </div>
     </section>
     <section class="fondblanc">
-        <div class="about">
+        <div class="about reveal">
             <p>ABOUT</p>
         </div>
         <div class="text">
-            <p>Etudiant à l'iim, au pôle Leonard de Vinci, j'étudie le développement web au cours d'un bachelor "coding et digital innovation"</p>
+            <p class="reveal">Etudiant à l'iim, au pôle Leonard de Vinci, j'étudie le développement web au cours d'un bachelor "coding et digital innovation"</p>
         </div>
     </section>
     <section class="projets">
