:sparkles: page d'inscription

--- a/index.html
+++ b/index.html
@@ -7,95 +7,15 @@
     <link rel="stylesheet" href="build.css">
     <title>Hugo Senée</title>
 </head>
-<header>
-    <div class="portfolioheader reveal">
-        <p>Portfolio<span>2022</span></p>
-    </div>
-    <div class="headerlink reveal">
-        <ul>
-            <li>About</li>
-            <li>Projects</li>
-            <li>Contact</li>
-        </ul>
-    </div>
-    <div class="modal">
-
-    </div>
-</header>
 <body>
-    <section class="landing">
-        <div class="image">
-            <img class="reveal" src="images/hugo détouré noir et blanc keus.png" alt="hugo">
-        </div>
-        <div class="droite">
-            <div class="hugo">
-                <p class="reveal">Hugo Senée</p>
-            </div>
-            <div class="developpeur">
-                <p class="reveal">Développeur</p>
-            </div>
-        </div>
-    </section>
-    <section class="fondblanc">
-        <div class="about reveal">
-            <p>ABOUT</p>
-        </div>
-        <div class="text">
-            <p class="reveal">Etudiant à l'iim, au pôle Leonard de Vinci, j'étudie le développement web au cours d'un bachelor "coding et digital innovation"</p>
-        </div>
-    </section>
-    <section class="projets">
-        <div class="titre">
-            <p>Projets</p>
-        </div>
-        <div class="projet1 reveal">
-            <div class="imgsite">
+    <h1 id="h1index">PORTFOLIO.</h1>
+    <p id="nom">Nom d'utilisateur...</p>
+    <p id="mdp">Mot de passe...</p>
+    <a href="portfolio.html"><button id="butonindex"></button></a>
 
-            </div>
-            <div class="textsite">
-                <p id="nomsite">Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit voluptatum sint iste, quos dolorem.</p>
-            </div>
-        </div>
-        <div class="projet2 reveal">
-            <div class="textsite">
-                <p id="nomsite">Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit voluptatum sint iste, quos dolorem.</p>
-            </div>
-            <div class="imgsite">
 
-            </div>
-        </div>
-        <div class="projet3 reveal">
-            <div class="imgsite">
 
-            </div>
-            <div class="textsite">
-                <p id="nomsite">Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit voluptatum sint iste, quos dolorem.</p>
-            </div>
-        </div>
-    </section>
-    <script src="script.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="index.js"></script>
 </body>
-<footer>
-    <div class="footer">
-        <div class="textlink">
-            <p>Looking for more ?</p>
-            <hr>
-            <div class="imglink">
-                <img src="images/instagram portfolio.png" alt="instagram">
-                <img src="images/linkedin portofolio.png" alt="linkedin">
-                <img src="images/github portfolio.png" alt="github">
-            </div>
-        </div>
-        <div class="cv">
-            <img src="images/cvv bleu.png" alt="cv">
-            <p>CV</p>
-        </div>
-    </div>
-    <div id="C2022">
-        <p>© 2022</p>
-    </div>
-</footer>
 </html>
