:sparkles: bouton index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="h1index">PORTFOLIO.</h1>
     <p id="nom">Nom d'utilisateur...</p>
     <p id="mdp">Mot de passe...</p>
-    <a href="portfolio.html"><button id="butonindex"></button></a>
+    <a href="portfolio.html"><button id="butonindex">&#10149;</button></a>
 
 
 
