--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
         </div>
         <div class="cv">
             <img src="images/cvv bleu.png" alt="cv">
-            <p>CV</p>
+            <a href="file:///C:/Users/hugos/Downloads/CV%20ENTREPRISE%20DIGITAL.pdf">CV</a>
         </div>
     </div>
     <div id="C2022">
