:sparkles: nouvelles animations

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,8 @@
         </div>
         <div class="projet1 reveal">
             <div class="imgsite">
-                <img src="images/t-coach.png" alt="Site T-COACH">
+                <img id="imgsiteimg" src="images/t-coach.png" alt="Site T-COACH">
+                <a href="t-coach.html"><p>Voir plus</p></a>
             </div>
             <div class="textsite">
                 <p id="nomsite">T-COACH</p>
@@ -66,6 +67,7 @@
             </div>
             <div class="imgsite">
                 <img src="images/chateau de versailles.png" alt="site chateau de versailles">
+                <a href="#"><p>Voir plus</p></a>
             </div>
         </div>
         <div class="projet3 reveal">
