--- a/t-coach.html
+++ b/t-coach.html
@@ -23,7 +23,14 @@
     </div>
 </header>
 <body>
-    
-</body>
+    <section class="sliderT-coach">
+        <img name="slide">
+    </section>
+
+
+
+
+
     <script src="script.js"></script>
+</body>
 </html>
