--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
