:sparkles: page pojects fini

--- a/chateaudeversailles.html
+++ b/chateaudeversailles.html
@@ -23,50 +23,48 @@
     </div>
 </header>
 <body>
-    <div class="landingT-coach reveal">
-        <p id="t-coachtitre">T-COACH</p>
-        <p>A connected t-shirt that competes with sports coaches</p>
-        <section class="sliderT-coach">
+    <div class="landingchateau reveal">
+        <p id="chateautitre">Château de Versailles</p>
+        <p>A website about the "Chçateau de Versailles" using grid and css positions</p>
+        <section class="sliderchateau">
             <img name="slide" class="slider reveal">
         </section>
     </div>
-    <div class="prest-coach">
+    <div class="prest-chateau">
         <div class="haut reveal">
             <div class="imghaut">
-                <img src="images/t-coach.png" alt="site t-coach">
+                <img src="images/chateau.png" alt="site château de versailles">
             </div>
-            <p id="textehaut">T-COACH is a connected tee-shirt which can replace a sport coach to help you build the body you want ! Because of many captors placed at several points, T-COACH can analyse your performances and give you the best personnalised advices. All this with a price that competes with every private sport coachs</p>
+            <p id="textehaut">This website was an exercice to practice using grid and css positions. I used some shades of brown and bisque to match with the classic and royal theme.</p>
             <div class="chartre">
                 <div class="bleu">
                     <div></div>
-                    <p>#0E89C2</p>
+                    <p>#ffe4c4</p>
                 </div>
                 <div class="noir">
                     <div></div>
-                    <p>#222222</p>
+                    <p>#B39878</p>
                 </div>
                 <div class="gris">
                     <div></div>
-                    <p>#BEBEBE</p>   
+                    <p>#040404</p>   
                 </div>
             </div>
         </div>
         <div class="bas reveal">
             <div class="imgbasgauche">
-                <img src="images/t-coach2.png" alt="site t-coach">
-                <p>The tee-shirt works with an application that you pay each months. You can choose your subscription with any advantages you want. From talk to a private coach to get some individual specialised videos...</p>
+                <img src="images/chateau1.png" alt="site château de versailles">
+                <p>This pictures display was made using grid on css</p>
             </div>
             <div class="imgbasdroite">
-                <img src="images/t-coach3.png" alt="site t-coach">
-                <p>T-COACH wants you to have the best sport experiences as possible ! Many articles are posted on the application each days. Just visit the blog and see some meals, sport articles, collaborations...</p>
+                <img src="images/chateau2.png" alt="site château de versailes">
+                <p>This pictures display was made using positions on css. This was possible because of absolute and relative positions.</p>
             </div>
         </div>
     </div>
 
 
-
-
-    <script src="t-coach.js"></script>
+    <script src="chateaudeversailles.js"></script>
 </body>
 <footer>
     <div class="footer" id="contact">
