--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <a href="portfolio.html"><button id="butonindex">&#10149;</button></a>
 
 
-
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
