--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <div class="portfolioheader reveal">
-        <p>Portfolio<span>2022</span></p>
+        <a href="portfolio.html"><p>Portfolio<span>2022</span></p></a>
     </div>
     <div class="headerlink reveal">
         <ul>
@@ -32,7 +32,7 @@
                 <p class="reveal">Hugo Senée</p>
             </div>
             <div class="developpeur">
-                <p class="reveal">Développeur</p>
+                <p class="reveal">Developer</p>
             </div>
         </div>
     </section>
@@ -41,17 +41,17 @@
             <p>ABOUT</p>
         </div>
         <div class="text">
-            <p class="reveal">Etudiant à l'iim, au pôle Leonard de Vinci, j'étudie le développement web au cours d'un bachelor "coding et digital innovation"</p>
+            <p class="reveal">Student at iim, at the Leonard de Vinci pole, I study web development during a bachelor's degree "coding and digital innovation"</p>
         </div>
     </section>
     <section class="projets" id="projets">
         <div class="titre">
-            <p>Projets</p>
+            <p>Projects</p>
         </div>
         <div class="projet1 reveal">
             <div class="imgsite">
                 <img id="imgsiteimg" src="images/t-coach.png" alt="Site T-COACH">
-                <a href="t-coach.html"><p>Voir plus</p></a>
+                <a href="t-coach.html"><p>More</p></a>
             </div>
             <div class="textsite">
                 <p id="nomsite">T-COACH</p>
@@ -64,8 +64,8 @@
                 <p>Website of the "Château de Versailles" using grid</p>
             </div>
             <div class="imgsite">
-                <img src="images/chateau de versailles.png" alt="site chateau de versailles">
-                <a href="#"><p>Voir plus</p></a>
+                <img src="images/chateau.png" alt="site chateau de versailles">
+                <a href="chateaudeversailles.html"><p>More</p></a>
             </div>
         </div>
         <div class="projet3 reveal">
