--- a/chateaudeversailles.html
+++ b/chateaudeversailles.html
@@ -25,7 +25,7 @@
 <body>
     <div class="landingchateau reveal">
         <p id="chateautitre">Château de Versailles</p>
-        <p>A website about the "Chçateau de Versailles" using grid and css positions</p>
+        <p>A website about the "Château de Versailles" using grid and css positions</p>
         <section class="sliderchateau">
             <img name="slide" class="slider reveal">
         </section>
