rich snippet test

--- a/index.html
+++ b/index.html
@@ -16,5 +16,23 @@
 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="index.js"></script>
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Hugo Senée",
+        "url": "",
+        "image": "images/hugo détouré noir et blanc keus.png",
+        "sameAs": [
+            "https://www.linkedin.com/in/hugo-sen%C3%A9e-6b6076224/",
+            "https://github.com/Hugosenee"
+        ],
+        "jobTitle": "Developer",
+        "worksFor": {
+            "@type": "Organization",
+            "name": "IIM Pole Leonard de Vinci"
+        }  
+        }
+        </script>
 </body>
 </html>
