--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 <body>
     <section class="landing">
         <div class="image">
-            <img class="reveal" src="images/hugo détouré noir et blanc keus.png" alt="hugo">
+            <img class="reveal" src="images/hugo détouré noir et blanc keus.png" alt="photo hugo senée">
         </div>
         <div class="droite">
             <div class="hugo">
@@ -41,7 +41,7 @@
             <p>ABOUT</p>
         </div>
         <div class="text">
-            <p class="reveal">Student at iim, at the Leonard de Vinci pole, I study web development during a bachelor's degree "coding and digital innovation"</p>
+            <p class="reveal">I'm a 19 years old student at IIM School, at the Leonard de Vinci University. I'm studying web development and completing my bachelor's degree "coding and digital innovation"</p>
         </div>
     </section>
     <section class="projets" id="projets">
@@ -74,12 +74,30 @@
             </div>
             <div class="textsite">
                 <p id="nomsite">Work in progress</p>
-                <p>Currently working on many porjects</p>
+                <p>Currently working on many projects</p>
             </div>
         </div>
     </section>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="script.js"></script>
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Hugo Senée",
+        "url": "",
+        "image": "images/hugo détouré noir et blanc keus.png",
+        "sameAs": [
+            "https://www.linkedin.com/in/hugo-sen%C3%A9e-6b6076224/",
+            "https://github.com/Hugosenee"
+        ],
+        "jobTitle": "Developer",
+        "worksFor": {
+            "@type": "Organization",
+            "name": "IIM Pole Leonard de Vinci"
+        }  
+        }
+        </script>
 </body>
 <footer>
     <div class="footer" id="contact">
