--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="build.css">
     <title>Hugo Senée</title>
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Hugo Senée",
+        "url": "https://portfolio-v1-4nxw01ktc-hugosenee.vercel.app/portfolio.html",
+        "image": "images/hugo détouré noir et blanc keus.png",
+        "sameAs": [
+            "https://www.linkedin.com/in/hugo-sen%C3%A9e-6b6076224/",
+            "https://github.com/Hugosenee"
+        ],
+        "jobTitle": "Developer",
+        "worksFor": {
+            "@type": "Organization",
+            "name": "IIM Pole Leonard de Vinci"
+        }  
+        }
+        </script>
 </head>
 <header>
     <div class="portfolioheader reveal">
@@ -80,24 +98,6 @@
     </section>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="script.js"></script>
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org/",
-        "@type": "Person",
-        "name": "Hugo Senée",
-        "url": "",
-        "image": "images/hugo détouré noir et blanc keus.png",
-        "sameAs": [
-            "https://www.linkedin.com/in/hugo-sen%C3%A9e-6b6076224/",
-            "https://github.com/Hugosenee"
-        ],
-        "jobTitle": "Developer",
-        "worksFor": {
-            "@type": "Organization",
-            "name": "IIM Pole Leonard de Vinci"
-        }  
-        }
-        </script>
 </body>
 <footer>
     <div class="footer" id="contact">
