--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="title" content="Hugo Senée - Portfolio 2022">
+    <meta name="description" content="étudiant en 2ème année de coding, venez découvrir mes différents projets dans ce portfolio">
+    <meta itemprop="UploadDate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@senee_hugo" />
+    <meta name="twitter:creator" content="@senee_hugo" />
+    <meta name="twitter:title" content="Hugo Senée - Portfolio 2022" />
+    <meta name="twitter:description" content="étudiant en 2ème année de coding, venez découvrir mes différents projets dans ce portfolio" />
+    <meta name="twitter:image" content="https://media-exp1.licdn.com/dms/image/C5603AQEDhhLB54jcmg/profile-displayphoto-shrink_800_800/0/1649833221058?e=2147483647&v=beta&t=IrJK7_b53XUn6nlFdz3FH0zaTtyfUt9_dWqoEKKO0uo" />
+
+    <meta property="og:title" content="Hugo Senée - Portfolio 2022" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="étudiant en 2ème année de coding, venez découvrir mes différents projets dans ce portfolio" />
+    <meta property="author" content="Hugo Senée" />
+    <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5603AQEDhhLB54jcmg/profile-displayphoto-shrink_800_800/0/1649833221058?e=2147483647&v=beta&t=IrJK7_b53XUn6nlFdz3FH0zaTtyfUt9_dWqoEKKO0uo" />
+
     <link rel="stylesheet" href="build.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/hugo détouré noir et blanc keus.png">
     <title>Hugo Senée</title>
     <script type="application/ld+json">
         {
@@ -12,7 +30,7 @@
         "@type": "Person",
         "name": "Hugo Senée",
         "url": "https://portfolio-v1-4nxw01ktc-hugosenee.vercel.app/",
-        "image": "images/hugo détouré noir et blanc keus.png",
+        "image": "https://media-exp1.licdn.com/dms/image/C5603AQEDhhLB54jcmg/profile-displayphoto-shrink_800_800/0/1649833221058?e=2147483647&v=beta&t=IrJK7_b53XUn6nlFdz3FH0zaTtyfUt9_dWqoEKKO0uo",
         "sameAs": [
             "https://www.linkedin.com/in/hugo-sen%C3%A9e-6b6076224/",
             "https://github.com/Hugosenee"
@@ -34,23 +52,5 @@
 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="index.js"></script>
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org/",
-        "@type": "Person",
-        "name": "Hugo Senée",
-        "url": "",
-        "image": "images/hugo détouré noir et blanc keus.png",
-        "sameAs": [
-            "https://www.linkedin.com/in/hugo-sen%C3%A9e-6b6076224/",
-            "https://github.com/Hugosenee"
-        ],
-        "jobTitle": "Developer",
-        "worksFor": {
-            "@type": "Organization",
-            "name": "IIM Pole Leonard de Vinci"
-        }  
-        }
-        </script>
 </body>
 </html>
