--- a/chateaudeversailles.html
+++ b/chateaudeversailles.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="build.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/hugo détouré noir et blanc keus.png">
     <title>Hugo Senée</title>
 </head>
 <header>
