:sparkles: logo site

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5603AQEDhhLB54jcmg/profile-displayphoto-shrink_800_800/0/1649833221058?e=2147483647&v=beta&t=IrJK7_b53XUn6nlFdz3FH0zaTtyfUt9_dWqoEKKO0uo" />
 
     <link rel="stylesheet" href="build.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/hugo détouré noir et blanc keus.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logo.png">
     <title>Hugo Senée</title>
     <script type="application/ld+json">
         {
